--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,24 +1,23 @@
-[project]
-name = "bookstore"
+[tool.poetry]
+name = "django-serializers"
 version = "0.1.0"
-description = "Bookstore API"
-authors = [
-    {name = "Daniel Santana", email = "jpdaniel.santana@gmail.com"}
-]
+description = ""
+authors = ["hsanfilippo <henrique.sanfilippo@gmail.com>"]
 readme = "README.md"
-requires-python = ">=3.13"
-dependencies = [
-    "django (>=5.2.7,<6.0.0)",
-    "djangorestframework (>=3.16.1,<4.0.0)"
-]
 
-[dependency-groups]
-dev = [
-    "pytest (>=8.4.2,<9.0.0)",
-    "factory-boy (>=3.3.3,<4.0.0)"
-]
+[tool.poetry.dependencies]
+python = "^3.10"
+pytest = "^8.3.2"
+factory-boy = "^3.3.0"
+pytest-django = "^4.8.0"
+django = "^5.1"
+django-rest-framework = "^0.1.0"
+djangorestframework = "^3.15.2"
+django-extensions = "^3.2.3"
+django-debug-toolbar = "^4.4.6"
+env = "^0.1.0"
 
 
 [build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
