--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "djangorestframework (>=3.16.1,<4.0.0)",
     "django-rest-framework (>=0.1.0,<0.2.0)",
     "pytest (>=8.4.2,<9.0.0)",
-    "django-debug-toolbar (>=6.0.0,<7.0.0)"
+    "django-debug-toolbar (>=6.0.0,<7.0.0)",
+    "shell (>=1.0.1,<2.0.0)"
 ]
 
 [dependency-groups]
