--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "django-rest-framework (>=0.1.0,<0.2.0)",
     "pytest (>=8.4.2,<9.0.0)",
     "django-debug-toolbar (>=6.0.0,<7.0.0)",
-    "shell (>=1.0.1,<2.0.0)"
+    "shell (>=1.0.1,<2.0.0)",
+    "django-extensions (>=4.1,<5.0)"
 ]
 
 [dependency-groups]
