--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "pytest (>=8.4.2,<9.0.0)",
     "django-debug-toolbar (>=6.0.0,<7.0.0)",
     "shell (>=1.0.1,<2.0.0)",
-    "django-extensions (>=4.1,<5.0)"
+    "django-extensions (>=4.1,<5.0)",
+    "psycopg2-binary (>=2.9.11,<3.0.0)"
 ]
 
 [dependency-groups]
