--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,31 @@
-version: '3.13'
+version: '3.8'
 
 services:
-  db:
-    image: postgres:13.0-alpine
+  web:
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/app
     ports:
-      - 5432:5432
+      - "8000:8000"
+    env_file:
+      - ./env.dev
+    depends_on:
+      db:
+        condition: service_healthy
+  db:
+    image: postgres:15-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=bookstore_dev
       - POSTGRES_PASSWORD=bookstore_dev
       - POSTGRES_DB=bookstore_dev_db
-  web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8000
-    volumes:
-      - . :/usr/src/app/
-    ports:
-      - 8000:8000
-    env_file:
-      - ./env.dev
-    depends_on:
-      - db
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB" ]
+      interval: 5s   # Testa a cada 5s
+      timeout: 5s    # Espera 5s pela resposta
+      retries: 5     # Tenta 5 vezes antes de falhar
 
 volumes:
   postgres_data:
